docs: update ext i18n

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -32,7 +32,7 @@
     "message": "processing"
   },
   "copy": {
-    "message": "Copy"
+    "message": "Copy link"
   },
   "copied": {
     "message": "Copied"
