--- a/public/_locales/zh_CN/messages.json
+++ b/public/_locales/zh_CN/messages.json
@@ -1,10 +1,10 @@
 {
   "extName": {
-    "message": "Portal - 新一代网络之家",
+    "message": "来啦 一起看吧",
     "description": "Portal name"
   },
   "extDescription": {
-    "message": "像积木一样自由组建你的浏览器主页！",
+    "message": "和队友一起讨论文档，写作业，看视频！",
     "description": "Portal description"
   },
   "login": {
