refactor: updates for Vera react version
一大波Vera React版本的稳定性修复

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -10,6 +10,15 @@
   "login": {
     "message": "Login"
   },
+  "reg": {
+    "message": "Sign Up"
+  },
+  "joinAsGuest": {
+    "message": "Join as Guest"
+  },
+  "tipLogin": {
+    "message": "To store history, please:"
+  },
   "tipLoading": {
     "message": "Loading"
   },
