--- a/public/_locales/es/messages.json
+++ b/public/_locales/es/messages.json
@@ -46,6 +46,9 @@
   "join": {
     "message": "Entrar"
   },
+  "prepare": {
+    "message": "prepare"
+  },
   "quitConfirm": {
     "message": "¿Estás segura de dejar de fumar?"
   }
