feat: add i18n && multi-user-state

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -49,6 +49,15 @@
   "invite": {
     "message": "Invite"
   },
+  "inviting": {
+    "message": "Inviting"
+  },
+  "fail": {
+    "message": "Fail"
+  },
+  "success": {
+    "message": "Success"
+  },
   "invited": {
     "message": "Invited"
   },
